Add: Contact form, favicon, updated emails, and LinkedIn profile guide

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Kreggscode - Full Stack Developer, Blockchain Engineer, Mobile Developer. Building innovative solutions across Web3, Mobile, and Cloud." />
     <meta name="keywords" content="Full Stack Developer, Blockchain, Android, iOS, React, Solidity, Kotlin, Web3" />
