--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Fira+Code:wght@400;500;600;700&display=swap" rel="stylesheet">
     
+    <!-- Google AdSense - Injected during build -->
+    <!-- ADSENSE_CODE_PLACEHOLDER -->
+    
     <title>Kreggscode - Full Stack & Blockchain Developer</title>
   </head>
   <body>
